Header spacing corrected

--- a/nocout/nocout/static/css/themes/nocout.css
+++ b/nocout/nocout/static/css/themes/nocout.css
@@ -786,16 +786,13 @@
 
 
 /*PAGES*/
-
 #content .page-header {
-  /*background: none #f5f6f6;*/
   border: 1px solid #d4d4d4;
   border-radius: 1px;
   color: #000000;
-/*  margin: 5px -10px !important;*/
   min-height: 0;
   overflow: hidden;
-  padding: 0 20px;
+  padding: 0 10px;
   position: relative;
 }
 
